--- a/frontend/src/app/libs/common-components-demo/components/checkbox-demo/checkbox-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/components/checkbox-demo/checkbox-demo.component.html
@@ -6,7 +6,7 @@
 					[theme]=lightTheme
 					[labelField]="checkboxGroupData.labelField" 
 					[valueField]="checkboxGroupData.valueField"
-					(onChange)="onChange($event)">
+					(change)="onChange($event)">
 				</app-checkbox-group>
 			</app-demo-state>
 		</div>
@@ -17,7 +17,7 @@
 					[theme]=darkTheme
 					[labelField]="checkboxGroupData.labelField" 
 					[valueField]="checkboxGroupData.valueField"
-					(onChange)="onChange($event)">
+					(change)="onChange($event)">
 				</app-checkbox-group>
 			</app-demo-state>
 		</div>
