refactor: just Input validators with throw error when added inline + refreshed tests

--- a/frontend/src/app/libs/common-components-demo/components/input-demo/input-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/components/input-demo/input-demo.component.html
@@ -6,7 +6,7 @@
 				<app-demo-state [title]="'Text'" [isDark]="false">
 					<div class="wrapper">
 						<app-input
-							[inputValidators]="inputSyncValidators"
+							[inputValidators]="textSyncValidators"
 							[type]="'text'"
 							[label]="'Your text'"
 							[placeholder]="'Your placeholder'"
@@ -16,7 +16,8 @@
 					</div>
 					<div class="wrapper">
 						<app-input
-							[inputValidatorsAsync]="inputAsyncValidators"
+							[inputValidators]="textSyncValidators"
+							[inputValidatorsAsync]="textAsyncValidators"
 							[type]="'text'"
 							[value]="'from input value'"
 							[label]="'Your text with validate'"
@@ -26,7 +27,7 @@
 						</app-input>
 					</div>
 					<div class="wrapper">
-						<app-input [disabled]="true" [type]="'text'" [label]="'Your text'" [placeholder]="'Your placeholder'" formControlName="text3"></app-input>
+						<app-input [inputValidators]="textSyncValidators" [disabled]="true" [type]="'text'" [label]="'Your text'" [placeholder]="'Your placeholder'" formControlName="text3"></app-input>
 					</div>
 					<app-button type="flat" (click)="submit(inputTextDemoForm.status)" [disabled]="inputTextDemoForm.status==='INVALID'">Click</app-button>
 				</app-demo-state>
@@ -35,14 +36,14 @@
 			<form class="input-demo__row" [formGroup]="inputEmailDemoForm">
 				<app-demo-state [title]="'Email'" [isDark]="false">
 					<div class="wrapper">
-						<app-input [type]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email1"></app-input>
+						<app-input [inputValidators]="emailValidators" [type]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email1"></app-input>
 					</div>
 
 					<div class="wrapper">
-						<app-input [value]="'email'" [type]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email2"></app-input>
+						<app-input [inputValidators]="emailValidators" [value]="'email'" [type]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email2"></app-input>
 					</div>
 					<div class="wrapper">
-						<app-input [type]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email3"></app-input>
+						<app-input [inputValidators]="emailValidators" [type]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email3"></app-input>
 					</div>
 					<app-button type="flat" (click)="submit(inputEmailDemoForm.status)" [disabled]="inputEmailDemoForm.status==='INVALID'">Click</app-button>
 				</app-demo-state>
@@ -51,13 +52,13 @@
 			<form class="input-demo__row" [formGroup]="inputPasswordDemoForm">
 				<app-demo-state [title]="'Password'" [isDark]="false">
 					<div class="wrapper">
-						<app-input [type]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" formControlName="password1"></app-input>
+						<app-input [inputValidators]="passwordValidators" [type]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" formControlName="password1"></app-input>
 					</div>
 					<div class="wrapper">
-						<app-input [type]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" formControlName="password2"></app-input>
+						<app-input [inputValidators]="passwordValidators" [type]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" formControlName="password2"></app-input>
 					</div>
 					<div class="wrapper">
-						<app-input [type]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" [secured]="false" formControlName="password3"></app-input>
+						<app-input [inputValidators]="passwordValidators" [type]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" [secured]="false" formControlName="password3"></app-input>
 					</div>
 					<app-button type="flat" (click)="submit(inputPasswordDemoForm.status)" [disabled]="inputPasswordDemoForm.status==='INVALID'">Click</app-button>
 				</app-demo-state>
@@ -69,13 +70,13 @@
 			<form [formGroup]="inputTextDemoForm">
 				<app-demo-state [title]="'Text'" [isDark]="true">
 					<div class="wrapper">
-						<app-input [theme]="darkTheme" [type]="'text'" [label]="'Your text'" [placeholder]="'Your placeholder'" formControlName="text1"></app-input>
+						<app-input [theme]="darkTheme" [inputValidators]="textSyncValidators" [type]="'text'" [label]="'Your text'" [placeholder]="'Your placeholder'" formControlName="text1"></app-input>
 					</div>
 					<div class="wrapper">
-						<app-input [theme]="darkTheme" [type]="'text'" [label]="'Your text'" [placeholder]="'Your placeholder'" formControlName="text2"></app-input>
+						<app-input [theme]="darkTheme" [inputValidators]="textSyncValidators" [inputValidatorsAsync]="textAsyncValidators" [type]="'text'" [label]="'Your text'" [placeholder]="'Your placeholder'" formControlName="text2"></app-input>
 					</div>
 					<div class="wrapper">
-						<app-input [theme]="darkTheme" [type]="'text'" [label]="'Your text'" [placeholder]="'Your placeholder'" formControlName="text3"></app-input>
+						<app-input [theme]="darkTheme" [inputValidators]="textSyncValidators" [type]="'text'" [label]="'Your text'" [placeholder]="'Your placeholder'" formControlName="text3"></app-input>
 					</div>
 					<app-button type="flat" [theme]="darkTheme" (click)="submit(inputTextDemoForm.status)" [disabled]="inputTextDemoForm.status==='INVALID'">Click</app-button>
 				</app-demo-state>
@@ -84,13 +85,13 @@
 			<form class="input-demo__row" [formGroup]="inputEmailDemoForm">
 				<app-demo-state [title]="'Email'" [isDark]="true">
 					<div class="wrapper">
-						<app-input [theme]="darkTheme" [type]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email1"></app-input>
+						<app-input [theme]="darkTheme" [inputValidators]="emailValidators" [type]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email1"></app-input>
 					</div>	
 					<div class="wrapper">
-						<app-input [theme]="darkTheme" [type]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email2"></app-input>
+						<app-input [theme]="darkTheme" [inputValidators]="emailValidators" [type]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email2"></app-input>
 					</div>	
 					<div class="wrapper">
-						<app-input [theme]="darkTheme" [type]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email3"></app-input>
+						<app-input [theme]="darkTheme" [inputValidators]="emailValidators" [type]="'email'" [label]="'Your email'" [placeholder]="'Your placeholder'" formControlName="email3"></app-input>
 					</div>
 					<app-button type="flat" [theme]="darkTheme" (click)="submit(inputEmailDemoForm.status)" [disabled]="inputEmailDemoForm.status==='INVALID'">Click</app-button>
 				</app-demo-state>
@@ -99,13 +100,13 @@
 			<form class="input-demo__row" [formGroup]="inputPasswordDemoForm">
 				<app-demo-state [title]="'Password'" [isDark]="true">
 					<div class="wrapper">
-						<app-input [theme]="darkTheme" [type]="'text'" [label]="'Your password'" [placeholder]="'Your placeholder'" formControlName="password1"></app-input>
+						<app-input [theme]="darkTheme" [inputValidators]="passwordValidators" [type]="'text'" [label]="'Your password'" [placeholder]="'Your placeholder'" formControlName="password1"></app-input>
 					</div>
 					<div class="wrapper">
-						<app-input [theme]="darkTheme" [type]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" formControlName="password2"></app-input>
+						<app-input [theme]="darkTheme" [inputValidators]="passwordValidators" [type]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" formControlName="password2"></app-input>
 					</div>
 					<div class="wrapper">
-						<app-input [theme]="darkTheme" [type]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" [secured]="false" formControlName="password3"></app-input>
+						<app-input [theme]="darkTheme" [inputValidators]="passwordValidators" [type]="'password'" [label]="'Your password'" [placeholder]="'Your placeholder'" [secured]="false" formControlName="password3"></app-input>
 					</div>
 					<app-button type="flat" [theme]="darkTheme" (click)="submit(inputPasswordDemoForm.status)" [disabled]="inputPasswordDemoForm.status==='INVALID'">Click</app-button>
 				</app-demo-state>
