--- a/frontend/src/app/libs/common-components-demo/components/progress-bar-demo/progress-bar-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/components/progress-bar-demo/progress-bar-demo.component.html
@@ -1,19 +1,18 @@
 <app-demo-group class="progress-demo" [title]="'Slide toggle'">
-    <div class="light-theme">
-        <app-demo-state [title]="'active'" [isDark]="false">
-            <app-progress-bar
-                [progress]="50"
-                [theme]=lightTheme>
-            </app-progress-bar>
-        </app-demo-state>
-    </div>
-    <div class="dark-theme">
-        <app-demo-state [title]="'active'" [isDark]="true">
-            <app-progress-bar
-                [progress]="50"
-                [theme]=darkTheme>
-            </app-progress-bar>
-        </app-demo-state>
+	<div class="light-theme">
+		<app-demo-state [title]="'Progress 35%'" [isDark]="false">
+			<app-progress-bar
+				[progress]="35"
+				[theme]=lightTheme>
+			</app-progress-bar>
+		</app-demo-state>
 	</div>
-	<!-- <mat-progress-bar mode="determinate" value="60"></mat-progress-bar> -->
+	<div class="dark-theme">
+		<app-demo-state [title]="'Progress 35%'" [isDark]="true">
+			<app-progress-bar
+				[progress]="35"
+				[theme]=darkTheme>
+			</app-progress-bar>
+		</app-demo-state>
+	</div>
 </app-demo-group>
