--- a/frontend/src/app/libs/common-components/components/progress-bar/progress-bar.component.html
+++ b/frontend/src/app/libs/common-components/components/progress-bar/progress-bar.component.html
@@ -1,1 +1,5 @@
-<mat-progress-bar mode="determinate" [value]="progress"></mat-progress-bar>
+<mat-progress-bar
+	mode="determinate" 
+	[value]="progress"
+	[class.progress-bar--dark-theme]="isDarkTheme">
+</mat-progress-bar>
