--- a/frontend/src/app/libs/common-components/shared/variables.scss
+++ b/frontend/src/app/libs/common-components/shared/variables.scss
@@ -17,6 +17,7 @@ $color-purple: #7457E6;
 $color-coral: #FF8A65;
 $color-black: #212121;
 $color-white: #FFFFFF;
+$color-yellow: #FDD835;
 // gradients
 $gradient-primary: linear-gradient(180deg, rgba(116, 227, 210, 0) 0%, rgba(116, 227, 210, 0.5) 100%), #367FF6;
 $gradient-secondary: linear-gradient(180deg, rgba(54, 127, 246, 0) 0%, rgba(54, 127, 246, 0.5) 100%), #7457E6;
