refactor: name in view changed

--- a/frontend/src/app/libs/common-components-demo/components/progress-bar-demo/progress-bar-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/components/progress-bar-demo/progress-bar-demo.component.html
@@ -1,4 +1,4 @@
-<app-demo-group class="progress-demo" [title]="'Slide toggle'">
+<app-demo-group class="progress-demo" [title]="'Progress bar'">
 	<div class="light-theme">
 		<app-demo-state [title]="'Progress 35%'" [isDark]="false">
 			<app-progress-bar
