Feat/progress bar (#76)
* feat: initial progress bar

* feat: demo added + pull

* feat: style added + test

* refactor: name in view changed

* feat: added test on input dark theme

* refactor: added ne line

Co-authored-by: Artur Makaranka <artur_makaranka@epam.com>

--- a/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
@@ -8,4 +8,6 @@
 	<app-popover-demo></app-popover-demo>
 	<app-scrollbar-demo></app-scrollbar-demo>
 	<app-radio-group-demo></app-radio-group-demo>
+	<app-progress-bar-demo></app-progress-bar-demo>
+
 </div>
