--- a/frontend/src/app-theme.scss
+++ b/frontend/src/app-theme.scss
@@ -37,6 +37,7 @@ $app-typography: mat-typography-config(
 @import "./app/libs/common-components/components/radio-group/radio-group.theme.scss";
 @import "./app/libs/common-components/components/slide-toggle/slide-toggle.theme.scss";
 @import "./app/libs/common-components/components/popover/popover.theme.scss";
+@import "./app/libs/common-components/components/input/input.theme.scss";
 @import "./app/libs/common-components/components/tabs/tabs.theme.scss";
 @import "./app/libs/common-components/components/tag-list/tag-list.theme.scss";
 @import "./app/libs/common-components/components/progress-bar/progress-bar.theme.scss"
