--- a/frontend/src/app-theme.scss
+++ b/frontend/src/app-theme.scss
@@ -38,4 +38,5 @@ $app-typography: mat-typography-config(
 @import "./app/libs/common-components/components/slide-toggle/slide-toggle.theme.scss";
 @import "./app/libs/common-components/components/popover/popover.theme.scss";
 @import "./app/libs/common-components/components/tabs/tabs.theme.scss";
-@import "./app/libs/common-components/components/tag-list/tag-list.theme.scss"
+@import "./app/libs/common-components/components/tag-list/tag-list.theme.scss";
+@import "./app/libs/container/components/header/header.theme.scss";
