--- a/frontend/src/app/libs/container/components/footer/footer.component.html
+++ b/frontend/src/app/libs/container/components/footer/footer.component.html
@@ -1,3 +1,3 @@
-<footer>
-	<p>© 2020 LEARNINJA. All rights reserved.</p>
+<footer class="footer">
+	<p class="footer__text">© 2020 LEARNINJA. All rights reserved.</p>
 </footer>
