--- a/frontend/src/app/libs/container/components/footer/footer.component.scss
+++ b/frontend/src/app/libs/container/components/footer/footer.component.scss
@@ -1,17 +1,19 @@
-footer {
-	width: 100%;
-	height: 40px;
-	background: #212121;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
+@import "variables";
 
-p {
-	font-family: Roboto;
-	font-style: normal;
-	font-weight: normal;
-	font-size: 12px;
-	line-height: 16px;
-	color: #ffffff;
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 40px;
+
+  background: #212121;
+
+  &__text {
+		@include text-small;
+		
+		margin-bottom: 0;
+
+    color: $color-white;
+  }
 }
