feat: add avatar component

--- a/frontend/src/app/libs/container/components/header/components/drop-down-menu/drop-down-menu-theme.scss
+++ b/frontend/src/app/libs/container/components/header/components/drop-down-menu/drop-down-menu-theme.scss
@@ -3,7 +3,6 @@
 		min-width: 64px;
 		border: 1px solid $color-white;
 		background: $color-black;
-		margin-top: 10px;
 	}
 	& .mat-menu-content:not(:empty) {
 		padding: 0;
@@ -14,4 +13,9 @@
 	&:hover {
 		background-color: $color-white-10;
 	}
+}
+
+@mixin drop-down-menu-container() {
+	display: flex;
+	height: 50px;
 }
