--- a/frontend/src/app/libs/container/components/header/components/notifications/notifications.theme.scss
+++ b/frontend/src/app/libs/container/components/header/components/notifications/notifications.theme.scss
@@ -1,4 +1,4 @@
-@import "../drop-down-menu/drop-down-menu-theme.mixin";
+@import "../drop-down-menu/drop-down-menu-theme";
 
 .notifications {
 	&__menu {
