--- a/frontend/src/app/libs/container/components/header/header.theme.scss
+++ b/frontend/src/app/libs/container/components/header/header.theme.scss
@@ -1,5 +1,6 @@
 @import "./components/localization/localization.theme.scss";
 @import "./components/notifications/notifications.theme.scss";
+@import "./components/avatar/avatar.theme.scss";
 
 .header {
 	&__admin-button--active {
