--- a/frontend/src/app/libs/container/components/header/components/localization/localization.component.html
+++ b/frontend/src/app/libs/container/components/header/components/localization/localization.component.html
@@ -1,10 +1,12 @@
-<app-button [theme]="darkTheme" [matMenuTriggerFor]="localizationMenu">
-	{{localizationService.currentLocale.name}}
-</app-button>
-<mat-menu class="localization__menu" #localizationMenu="matMenu">
-	<button mat-menu-item class="localization__menu-item"
-			*ngFor="let locale of localizationService.locales"
-			(click)="localizationService.chooseCurrentLocale(locale)">
-		<span>{{locale.name}}</span>
-	</button>
-</mat-menu>
+<div class="localization">
+	<app-button class="localization__menu-trigger" [theme]="darkTheme" [matMenuTriggerFor]="menu">
+		{{localizationService.currentLocale.name}}
+	</app-button>
+	<mat-menu class="localization__menu" #menu="matMenu">
+		<button mat-menu-item class="localization__menu-item"
+				*ngFor="let locale of localizationService.locales"
+				(click)="localizationService.chooseCurrentLocale(locale)">
+			<span>{{locale.name}}</span>
+		</button>
+	</mat-menu>
+</div>
