--- a/frontend/src/app/libs/container/components/header/header.component.html
+++ b/frontend/src/app/libs/container/components/header/header.component.html
@@ -1,6 +1,6 @@
-<mat-toolbar class="header">
+<header class="header">
 	<div class="header__logo-container">
-		<img src="../../../../../assets/images/logo.svg">
+		<img src="assets/images/logo.svg">
 	</div>
 	<div class="header__admin-buttons" *ngIf="isAdminUser">
 		<app-button 
@@ -23,15 +23,20 @@
 		</app-button>
 	</div>
 	<div class="header__common-buttons">
-		<app-localization></app-localization>
+		<app-localization class="header__localization"></app-localization>
 		<app-button class="header__button" *ngIf="isEventManagerUser" [theme]="darkTheme" [type]="flatButtonType">{{localization.create_event}}</app-button>
 		<ng-container *ngIf="isUnauthorizedUser">
 			<app-button class="header__button" [theme]="darkTheme" [type]="outlinedButtonType" routerLink="signin">{{localization.sign_in}}</app-button>
 			<app-button class="header__button" [theme]="darkTheme" [type]="flatButtonType" routerLink="signup">{{localization.sign_up}}</app-button>
 		</ng-container>
 		<ng-container *ngIf="!isUnauthorizedUser">
-
 			<app-notifications class="header__notifications"></app-notifications>
+			<app-avatar class="header__avatar"
+					[userName]="userName"
+					[userPhotoUrl]="user.photoUrl"
+					[isEventManagerUser]="isEventManagerUser" 
+					[isAdminUser]="isAdminUser">
+			</app-avatar>
 		</ng-container>
 	</div>
-</mat-toolbar>
+</header>
