--- a/frontend/src/app/libs/container/components/header/components/notifications/notifications.theme.scss
+++ b/frontend/src/app/libs/container/components/header/components/notifications/notifications.theme.scss
@@ -1,6 +1,13 @@
 @import "../drop-down-menu/drop-down-menu-theme";
 
 .notifications {
+	&__menu-trigger {
+		& .mat-badge-small.mat-badge-overlap.mat-badge-after .mat-badge-content {
+			top: -5px;
+			right: -5px;
+		}
+	}
+
 	&__menu {
 		@include drop-down-menu-theme;
 	}
