--- a/frontend/src/app/libs/container/components/header/components/avatar/avatar.component.html
+++ b/frontend/src/app/libs/container/components/header/components/avatar/avatar.component.html
@@ -1,14 +1,14 @@
 <div class="avatar">
 	<div class="avatar__menu-trigger" [matMenuTriggerFor]="menu">
 		<div class="avatar__photo-container">
-			<img class="avatar__photo" [src]="photoUrl">
+			<img class="avatar__photo" [src]="userService.photoUrl">
 		</div>
 		<mat-icon class="avatar__arrow-icon">arrow_drop_down</mat-icon>
 	</div>
 	<mat-menu class="avatar__menu" #menu="matMenu" xPosition="before">
 		<button mat-menu-item class="avatar__user-name-container">
 			<div class="avatar__user-name-label">{{localization.user_name}}</div>
-			<div class="avatar__user-name">{{userName}}</div>
+			<div class="avatar__user-name">{{displayedName}}</div>
 		</button>
 		<button mat-menu-item class="avatar__button" routerLink="profile">{{localization.account}}</button>
 		<button mat-menu-item class="avatar__button" (click)="refreshPage()">{{localization.log_off}}</button>
