refactor: toggle clam replced to users

--- a/frontend/src/app/libs/admin-role-management/components/user-role-tile/user-role-tile.component.html
+++ b/frontend/src/app/libs/admin-role-management/components/user-role-tile/user-role-tile.component.html
@@ -15,7 +15,7 @@
     <div class="user-role-tile__slide-toggle">
       <span>Event Manager </span>
       <app-slide-toggle [value]="userEventManagerState"
-                        [disabled]="userUpdateIsDisabled"
+                        [disabled]="disabled"
                         (toggled)="toggleEventManagerClaim($event)">
       </app-slide-toggle>
     </div>
