feat: move translations of texts to json

--- a/frontend/src/app/libs/container/components/footer/footer.component.html
+++ b/frontend/src/app/libs/container/components/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer class="footer">
-	<p class="footer__text">{{localization.footer_text}}</p>
+	<p class="footer__text">© 2020 LEARNINJA. {{"FOOTER.ALL_RIGHTS_RESERVED" | translate}}</p>
 </footer>
