refactor: create wrapper module for TranslateModule

--- a/frontend/src/app/libs/container/components/header/header.theme.scss
+++ b/frontend/src/app/libs/container/components/header/header.theme.scss
@@ -1,4 +1,4 @@
-@import "./components/localization/localization.theme.scss";
+@import "../localization/localization.theme.scss";
 @import "./components/notifications/notifications.theme.scss";
 @import "./components/avatar/avatar.theme.scss";
 
