fix: logo is flickering

--- a/frontend/src/app/libs/container/components/header/header.component.html
+++ b/frontend/src/app/libs/container/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="header">
 	<div class="header__logo-container">
-		<img src="assets/images/logo.svg">
+		<img class="header__logo" src="assets/images/logo.svg">
 	</div>
 	<div class="header__admin-buttons" *ngIf="userService.isAdminUser">
 		<app-button 
