--- a/frontend/src/app/libs/container/components/header/header.component.scss
+++ b/frontend/src/app/libs/container/components/header/header.component.scss
@@ -1,48 +1,57 @@
 @import "variables";
 
 .header {
-	position: sticky;
-	top: 0;
-	z-index: 1;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 
-	display: flex;
-	align-items: center;
-	height: 80px;
-	padding: 0 72px;
+  display: flex;
+  align-items: center;
+  height: 80px;
+  padding: 0 72px;
 
-	background: $color-black;
+  background: $color-black;
 
-	&__common-buttons {
-		display: flex;
-		align-items: center;
-		margin-left: auto;
-	}
+  &__common-buttons {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+  }
 
-	&__button {
-		margin-left: 16px;
-	}
+  &__button {
+    margin-left: 16px;
+  }
 
-	&__admin-button {
-		margin-left: 40px;
-	}
+  &__admin-button {
+    margin-left: 40px;
+  }
 
-	&__notifications {
-		margin: 0 24px;
-	}
+  &__notifications {
+    margin: 0 24px;
+  }
 
-	&__avatar {
-		margin-left: 1px;
-	}
+  &__avatar {
+    margin-left: 1px;
+  }
 
-	&__logo-container {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		min-width: 184px;
-		height: 40px;
+  &__logo-container {
+    position: relative;
 
-		background: #ffffff;
+    min-width: 184px;
+    height: 40px;
 
-		user-select: none;
-	}
+    line-height: 40px;
+
+    background: #ffffff;
+
+    user-select: none;
+  }
+
+  &__logo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    transform: translate(-50%, -50%);
+  }
 }
