feat: checkbox common component (#75)
* feat: checkbox common component

* feat: fix

* feat: fix specs

* feat: delete spaces

* feat: add new lines at he end

* feat: add get value function

* feat: fix getValue method

--- a/frontend/src/app-theme.scss
+++ b/frontend/src/app-theme.scss
@@ -40,4 +40,5 @@ $app-typography: mat-typography-config(
 @import "./app/libs/common-components/components/input/input.theme.scss";
 @import "./app/libs/common-components/components/tabs/tabs.theme.scss";
 @import "./app/libs/common-components/components/tag-list/tag-list.theme.scss";
+@import "./app/libs/common-components/components/checkbox/checkbox.theme.scss";
 @import "./app/libs/common-components/components/progress-bar/progress-bar.theme.scss"
