feat: table component, rendering with inner component and automated string template

--- a/frontend/src/app-theme.scss
+++ b/frontend/src/app-theme.scss
@@ -39,5 +39,6 @@ $app-typography: mat-typography-config(
 @import "./app/libs/common-components/components/popover/popover.theme.scss";
 @import "./app/libs/common-components/components/input/input.theme.scss";
 @import "./app/libs/common-components/components/tabs/tabs.theme.scss";
+@import "./app/libs/common-components/components/table/table.theme.scss";
 @import "./app/libs/common-components/components/tag-list/tag-list.theme.scss";
 @import "./app/libs/common-components/components/progress-bar/progress-bar.theme.scss"
