--- a/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
+++ b/frontend/src/app/libs/common-components-demo/common-components-demo.component.html
@@ -10,4 +10,5 @@
 	<app-radio-group-demo></app-radio-group-demo>
 	<app-input-demo></app-input-demo>
 	<app-progress-bar-demo></app-progress-bar-demo>
+	<app-table-demo></app-table-demo>
 </div>
