feat: black theme added

--- a/frontend/src/app/libs/common-components/components/table/table.theme.scss
+++ b/frontend/src/app/libs/common-components/components/table/table.theme.scss
@@ -1,3 +1,20 @@
+@import "variables";
+
 .table-component {
 	width: 100%;
-  }
+
+	&--dark-theme {
+		background: $color-black;
+	}
+	&--dark-theme .mat-header-cell{
+		color: $color-white;
+	}
+	&--dark-theme .mat-cell{
+		color: $color-white;
+		border-bottom-color: $color-white-30;
+	}
+	&--dark-theme .mat-footer-cell{
+		color: $color-white;
+		border-top-color: $color-white-30;
+	}
+}
