Feat/app container (#77)
* feat: container

* fix: imports/exports in common module

* fix: footer

* fix: delete old

* feat: add header localization and notifications

* feat: add avatar component

* feat: add localization for footer

* test: make app to pass container tests

* refactor: add new line in the file

* refactor: add new lines in the end of some files

* fix: change line height of avatar menu button

* fix: change notification badge position

* fix: remove extra imports from app-module

* refactor: convert indentations to tabs

* fix: add animation browser moule to app moddule

* refactor: move default avatar paths to enum

* refactor: move magic strings to enum

* feat: create User Service

* test: add store to avatar and userService test modules

* feat: move translations of texts to json

* fix: auth module is not importd to app

* refactor: create wrapper module for TranslateModule

* feat: make log out button work

* fix: logo is flickering

* refactor: fix remarks

* test: cover container services with unit tests

* test: add specs for container

* refactor: remove debug file

Co-authored-by: angrybrain <ndakota70@protonmail.com>

--- a/frontend/src/app/libs/common-components/components/button/button.component.html
+++ b/frontend/src/app/libs/common-components/components/button/button.component.html
@@ -1,10 +1,12 @@
 <ng-container [ngSwitch]="type">
-	<button 
+	<button
 			*ngSwitchCase="basicType" 
 			mat-button 
 			class="button button--basic" 
 			[class.button--dark-theme]="isDarkTheme"
-			[disabled]="disabled">
+			[class.button--disable-hover]="disableHover"
+			[disabled]="disabled"
+			[disableRipple]="disableRipple">
 		<ng-container *ngTemplateOutlet="buttonText"></ng-container>
 	</button>
 	<button 
@@ -12,7 +14,9 @@
 			mat-stroked-button 
 			class="button button--outlined" 
 			[class.button--dark-theme]="isDarkTheme"
-			[disabled]="disabled">
+			[class.button--disable-hover]="disableHover"
+			[disabled]="disabled"
+			[disableRipple]="disableRipple">
 		<ng-container *ngTemplateOutlet="buttonText"></ng-container>
 	</button>
 	<button
@@ -20,7 +24,9 @@
 			mat-flat-button 
 			class="button button--flat"
 			[class.button--dark-theme]="isDarkTheme"
-			[disabled]="disabled">
+			[class.button--disable-hover]="disableHover"
+			[disabled]="disabled"
+			[disableRipple]="disableRipple">
 		<ng-container *ngTemplateOutlet="buttonText"></ng-container>
 	</button>
 </ng-container>
