--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,1 @@
-<div class="content">
-	<span>{{ title }} app is running!</span>
-</div>
-
-<router-outlet></router-outlet>
+<app-container></app-container>
