--- a/frontend/src/app/libs/common-components/components/table/table.theme.scss
+++ b/frontend/src/app/libs/common-components/components/table/table.theme.scss
@@ -1,4 +1,16 @@
 @import "variables";
+// .mat-header-cell {
+// 	flex-direction: column;
+// 	justify-content: center;
+// 	align-self: center;
+//   }
+
+//   .mat-cell {
+// 	text-align: center;
+// 	justify-content:center;
+// 	align-self: center;
+
+//   }
 
 .table-component {
 	width: 100%;
@@ -8,6 +20,10 @@
 	}
 	&--dark-theme .mat-header-cell{
 		color: $color-white;
+	}
+	&--dark-theme .mat-header-cell {
+		color: $color-white;
+		border-bottom-color: $color-white-30;
 	}
 	&--dark-theme .mat-cell{
 		color: $color-white;
